[workspace]

members = [
    "ch01-01-hello-world",
    "ch02-01-read-number",
    "ch02-02-guessing-game",
    "ch03-01-variables",
    "ch03-02-data-types",
    "ch03-02-functions",
    "ch03-03-control-flow",
    "ch04-01-ownership",
    "ch04-02-references-borrowing",
    "ch04-03-slice",
    "ch05-01-structs",
    "ch05-02-structs-example",
]
